# INSY684_Group

./: .dockerignore  .gitignore  Dockerfile  Makefile  Personal Commit explanation.txt  README.md  instruction.txt  pyproject.toml  requirements.txt  run_api.cmd  run_dashboard.cmd
.github/workflows/: ci.yml  docker.yml
artifacts/: cost_sensitivity.csv  drift_summary.json  learning_curves.csv  model_bundle.joblib  test_calibration.csv  test_subgroup_metrics.csv  train_calibration.csv  training_report.json  tuning_report.json  tuning_trials.csv  validation_calibration.csv  validation_confusion_matrix.csv  validation_subgroup_metrics.csv
docs/: BUSINESS_CONTEXT.md  CODE_QUALITY.md  DATA_REPORT.md  DEPLOYMENT.md  EXPERIMENT_TRACKING.md  FAIRNESS.md  MODEL_CARD.md  MONITORING.md  PROJECT_PLAN.md  RESULTS.md  SUBMISSION_INFO.md  VALIDATION.md  business_assumptions_and_questions.md  business_problem_and_metrics.md  course1_to_course2_upgrade_plan.md  decision_policy.md
monitoring_dashboard/: generate_monitoring_html_offline.py  monitoring_dashboard.py  monitoring_dashboard_html_offline.html
presentations/: README.md  insy684-mlops-technical-section.pptx
reports/: business_impact_model_scenarios.csv  business_impact_scenarios.csv  business_impact_summary.md  business_policy_summary.md
scripts/: build_dataset.py  business_impact_simulation.py  business_policy_report.py  quality.ps1
src/: data_processing.py
tests/: test_api.py  test_dashboard.py  test_features.py  test_modeling.py  test_release_artifact.py  test_reporting.py  test_tuning.py
(+41 files in other folders)
