[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "homecredit-risk-service"
version = "0.1.0"
description = "FastAPI + LightGBM service for Home Credit default risk scoring"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "scikit-learn>=1.8,<1.9",
  "lightgbm>=4.6.0",
  "joblib>=1.5.0",
  "matplotlib>=3.9.0",
  "mlflow>=3.6.0",
  "optuna>=4.6.0",
]

[project.scripts]
train-homecredit = "homecredit_service.train:main"
tune-homecredit = "homecredit_service.tune:main"
generate-governance-reports = "homecredit_service.reporting:main"
run-homecredit-local-app = "homecredit_service.local_app:main"

[dependency-groups]
dashboard = [
  "streamlit>=1.45,<2",
]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
  "ty",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
  ".uv-cache",
  ".venv",
  "homecreditdefaultriskdata",
  "artifacts",
  # Standalone dashboard bundle with its own runtime and generated evidence assets.
  "INSY684_Group-Extend",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"

[tool.hatch.build.targets.wheel]
packages = ["src/homecredit_service"]
